Fix Slack app manifest - remove invalid app_mentions:write scope

--- a/slack-app-manifest.json
+++ b/slack-app-manifest.json
@@ -34,8 +34,7 @@
         "im:history",
         "im:read",
         "im:write",
-        "users:read",
-        "app_mentions:write"
+        "users:read"
       ]
     }
   },
