Fix missing message.im event subscription in Slack app manifest
- Add message.im to bot_events to receive messages in DMs
- This was preventing the app from receiving thread messages for SMS replies
- Users need to update their Slack app manifest and reinstall

--- a/slack-app-manifest.json
+++ b/slack-app-manifest.json
@@ -41,7 +41,8 @@
   "settings": {
     "event_subscriptions": {
       "bot_events": [
-        "app_home_opened"
+        "app_home_opened",
+        "message.im"
       ]
     },
     "interactivity": {
