Fix manifest - use message.channels instead of invalid message.im event
- Replace message.im with message.channels which is a valid Slack bot event
- This should allow the app to receive messages in DMs for SMS replies

--- a/slack-app-manifest.json
+++ b/slack-app-manifest.json
@@ -42,7 +42,7 @@
     "event_subscriptions": {
       "bot_events": [
         "app_home_opened",
-        "message.im"
+        "message.channels"
       ]
     },
     "interactivity": {
