--- a/slack-app-manifest.json
+++ b/slack-app-manifest.json
@@ -42,7 +42,7 @@
     "event_subscriptions": {
       "bot_events": [
         "app_home_opened",
-        "message.channels"
+        "message.im"
       ]
     },
     "interactivity": {
